--- a/src/gppi/package/templates/package/package_detail.html
+++ b/src/gppi/package/templates/package/package_detail.html
@@ -1,6 +1,6 @@
 {% extends "package/_base.html" %}
 
 {% block content %}
-<a href="{{request.current_host}}{{release.content.url}}"
+<a href="{{request.current_host}}{% url gppi-media %}{{release.content.url}}"
     >{{release.content.basename}}</a>
 {% endblock %}
